[package]
name = "rusty-dungeon"
version = "0.1.0"
authors = ["mick-roper <mick@theropers.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.16.1"
specs-derive = "0.4.1"

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["image"]
